[gd_scene load_steps=10 format=3 uid="uid://d36j4pc5g5ick"]

[ext_resource type="Script" path="res://host.gd" id="1_438d8"]

[sub_resource type="LabelSettings" id="LabelSettings_rr127"]
font_size = 28

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_h6y53"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_461ob"]
bg_color = Color(0, 0.580392, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yy34"]
bg_color = Color(0, 0.137255, 0.00392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfmk7"]
bg_color = Color(0.745098, 0.113725, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0os1l"]
bg_color = Color(0.235294, 0.0352941, 0, 1)

[sub_resource type="StyleBox" id="StyleBox_3q623"]
resource_local_to_scene = false
resource_name = ""
content_margin_left = -1.0
content_margin_top = -1.0
content_margin_right = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBox" id="StyleBox_vjuqx"]
resource_local_to_scene = false
resource_name = ""
content_margin_left = -1.0
content_margin_top = -1.0
content_margin_right = -1.0
content_margin_bottom = -1.0

[node name="host" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_438d8")

[node name="label_details_text" type="Label" parent="."]
layout_mode = 0
offset_left = 578.0
offset_top = 143.0
offset_right = 1103.0
offset_bottom = 515.0
text = "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas sollicitudin. Pellentesque pretium lectus id turpis. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam ornare wisi eu metus. Mauris dictum facilisis augue. Etiam dictum tincidunt diam."
autowrap_mode = 2

[node name="label_name" type="Label" parent="."]
layout_mode = 0
offset_left = 578.0
offset_top = 23.0
offset_right = 1106.0
offset_bottom = 143.0
text = "Movie name
Nazev filmu"
label_settings = SubResource("LabelSettings_rr127")
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 357.0
offset_right = 536.0
offset_bottom = 368.0
value = 50.0

[node name="img_movie" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 23.0
offset_right = 536.0
offset_bottom = 328.0
texture = SubResource("PlaceholderTexture2D_h6y53")
ignore_texture_size = true
stretch_mode = 4

[node name="btn_correct" type="Button" parent="."]
layout_mode = 0
offset_left = 588.0
offset_top = 562.0
offset_right = 728.0
offset_bottom = 619.0
theme_override_styles/normal = SubResource("StyleBoxFlat_461ob")
theme_override_styles/disabled = SubResource("StyleBoxFlat_3yy34")
disabled = true
text = "Correct"

[node name="btn_wrong" type="Button" parent="."]
layout_mode = 0
offset_left = 783.0
offset_top = 562.0
offset_right = 923.0
offset_bottom = 619.0
theme_override_styles/normal = SubResource("StyleBoxFlat_bfmk7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0os1l")
disabled = true
text = "Wrong"

[node name="btn_next" type="Button" parent="."]
layout_mode = 0
offset_left = 978.0
offset_top = 562.0
offset_right = 1118.0
offset_bottom = 619.0
text = "Next"

[node name="btn_pause" type="Button" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 458.0
offset_right = 536.0
offset_bottom = 515.0
disabled = true
text = "Pause"

[node name="btn_show" type="Button" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 562.0
offset_right = 536.0
offset_bottom = 619.0
text = "Show movie"

[node name="btn_play" type="Button" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 357.0
offset_right = 536.0
offset_bottom = 414.0
text = "Play"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="list_players" type="ItemList" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 23.0
offset_right = 296.0
offset_bottom = 621.0
theme_override_styles/selected = SubResource("StyleBox_3q623")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 18.0
offset_right = 304.0
offset_bottom = 630.0
theme_override_styles/panel = SubResource("StyleBox_vjuqx")
